[package]
name = "lexer"
version = "0.1.0"
edition = "2021"
description = "A simple regex based lexer"
license = "MIT OR Apache-2.0"
keywords = ["Parser", "Lexer", "lex"]
categories = ["compilers", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
